# templates

./: .envrc  .gitignore  .gitmodules  .lenvs  .pre-commit-config.yaml  .related  .tool-versions  abbrevs.defs  doot.toml  index.rst  pyproject.toml  readme.org
.maintenance/: apt.repos  (+22 more)
projects/jacamo/{{cookiecutter.proj_name}}/: .jcm-deps.gradle.kts  build.gradle.kts  pyproject.toml  settings.gradle.kts
projects/jacamo/{{cookiecutter.proj_name}}/src/_configs/: logging.properties  simple.jcm
projects/jacamo/{{cookiecutter.proj_name}}/src/tests/agents/: test-sample.asl
projects/jg_el_rust/{{cookiecutter.proj_name}}/: Cargo.toml  README.md
projects/jg_py/{{cookiecutter.proj_name}}/: .readthedocs.yaml  LICENSE  pylint.toml  pyproject.toml  pyrightconfig.json
projects/jg_py/{{cookiecutter.proj_name}}/.github/workflows/: pages.yml  python-publish.yml
projects/jg_py/{{cookiecutter.proj_name}}/.tasks/: version.tsk.toml
projects/jg_py_rust/{{cookiecutter.proj_name}}/: CHANGELOG.md  Cargo.toml  pyproject.toml
projects/jg_py_rust/{{cookiecutter.proj_name}}/python/{{cookiecutter.proj_name}}/: __init__.py
projects/jg_py_rust/{{cookiecutter.proj_name}}/src/{{cookiecutter.proj_name}}-macros-rs/: Cargo.toml
projects/jg_py_rust/{{cookiecutter.proj_name}}/src/{{cookiecutter.proj_name}}-rs/src/: lib.rs
projects/multi-lang/{{cookiecutter.proj_name}}/src/rs_{{cookiecutter.proj_name}}_bridge_el/: Cargo.toml
projects/multi-lang/{{cookiecutter.proj_name}}/src/rs_{{cookiecutter.proj_name}}_bridge_el/src/: lib.rs
projects/polyglot/{{cookiecutter.proj_name}}/: .lenvs  .rustfmt.toml  .sdkmanrc  .tool-versions  Cargo.toml  Directory.Build.props  Directory.Build.targets  README.md  VERSION.toml  _CoqProject  book.toml  build.gradle.kts  config.exs  mix.exs  nuget.config  project.godot  pyproject.toml  repo-layout.md  ruff.toml  rust-toolchain.toml  settings.gradle.kts  tox.toml
projects/polyglot/{{cookiecutter.proj_name}}/.cargo/: config.toml
projects/polyglot/{{cookiecutter.proj_name}}/.github/workflows/: python-publish.yml
projects/polyglot/{{cookiecutter.proj_name}}/.tasks/: cargo-jg
projects/polyglot/{{cookiecutter.proj_name}}/src/_docs/: SUMMARY.md
projects/polyglot/{{cookiecutter.proj_name}}/src/_docs/_notes/: docs.md  dotnet.md  elixir.md  godot.md  kotlin.md  lisp.md  misc.md  prolog.md  python.md  rocq.md  rust.md  tasks.md
projects/polyglot/{{cookiecutter.proj_name}}/src/cs_{{cookiecutter.proj_name}}/{{cookiecutter.proj_name}}/: tests.csproj
projects/polyglot/{{cookiecutter.proj_name}}/src/el_{{cookiecutter.proj_name}}/: {{cookiecutter.proj_name}}.el
projects/polyglot/{{cookiecutter.proj_name}}/src/ex_{{cookiecutter.proj_name}}/: {{cookiecutter.proj_name}}.ex
projects/polyglot/{{cookiecutter.proj_name}}/src/ex_{{cookiecutter.proj_name}}/test/: {{cookiecutter.proj_name}}_test.exs
projects/polyglot/{{cookiecutter.proj_name}}/src/kt_{{cookiecutter.proj_name}}/_configs/: gui-log.properties  {{cookiecutter.proj_name}}.jcm
projects/polyglot/{{cookiecutter.proj_name}}/src/kt_{{cookiecutter.proj_name}}/tests/: tests.jcm
projects/polyglot/{{cookiecutter.proj_name}}/src/py_{{cookiecutter.proj_name}}_dep/: pyproject.toml
projects/polyglot/{{cookiecutter.proj_name}}/src/rq_{{cookiecutter.proj_name}}/: main.v
projects/polyglot/{{cookiecutter.proj_name}}/src/rs_{{cookiecutter.proj_name}}_bridge_c/: Cargo.toml  build.rs  wrapper.h
projects/polyglot/{{cookiecutter.proj_name}}/src/rs_{{cookiecutter.proj_name}}_bridge_c/c_src/: simple.c  simple.h
projects/polyglot/{{cookiecutter.proj_name}}/src/rs_{{cookiecutter.proj_name}}_macros/: Cargo.toml
projects/py-work/{{cookiecutter.proj_name}}/: .readthedocs.yaml  pyproject.toml  tox.toml
projects/py-work/{{cookiecutter.proj_name}}/.github/workflows/: python-publish.yml
projects/py/{{cookiecutter.proj_name}}/: .lenvs  .readthedocs.yaml  LICENSE  checklist.md  pyproject.toml  tox.toml
projects/rs-el-py/{{cookiecutter.proj_name}}/: .envrc  .gitignore  .related  .rustfmt.toml  Cargo.toml  build.rs  pyproject.toml  ruff.toml  rust-toolchain.toml  tox.toml
projects/rs-el-py/{{cookiecutter.proj_name}}/src/: index.rst
projects/rs-el-py/{{cookiecutter.proj_name}}/src/_docs/: conf.py  overview.md
projects/rs-el-py/{{cookiecutter.proj_name}}/src/_tests/: test_integration.el  test_integration.rs
projects/rs-el-py/{{cookiecutter.proj_name}}/src/py_{{cookiecutter.proj_name}}_dep/: pyproject.toml
projects/rs-el-py/{{cookiecutter.proj_name}}/src/rs_{{cookiecutter.proj_name}}_bridge_py/: Cargo.toml
projects/rs-el-py/{{cookiecutter.proj_name}}/src/{{cookiecutter.proj_name}}/: __init__.py
projects/rs-el/{{cookiecutter.proj_name}}/crates/{{cookiecutter.proj_name}}/: Cargo.toml
projects/rs-py/{{cookiecutter.proj_name}}/src/{{cookiecutter.proj_name}}-rs/: Cargo.toml
projects/sphinx_domain/sphinx_{{cookiecutter.proj_name}}_domain/: .envrc  .gitignore  .readthedocs.yaml  .related  NEWS.rst  README.md  VERSION.toml  checklist.md  pyproject.toml  ruff.toml  towncrier.toml  tox.toml
projects/sphinx_domain/sphinx_{{cookiecutter.proj_name}}_domain/.tasks/: todos.org
projects/sphinx_domain/sphinx_{{cookiecutter.proj_name}}_domain/sphinx_{{cookiecutter.proj_name}}_domain/: __init__.py  domain.py  index.rst  parser.py
projects/sphinx_domain/sphinx_{{cookiecutter.proj_name}}_domain/sphinx_{{cookiecutter.proj_name}}_domain/__tests/: test_bib_domain.py
projects/sphinx_domain/sphinx_{{cookiecutter.proj_name}}_domain/sphinx_{{cookiecutter.proj_name}}_domain/_docs/: conf.py
projects/sphinx_domain/sphinx_{{cookiecutter.proj_name}}_domain/sphinx_{{cookiecutter.proj_name}}_domain/builder/: __init__.py  builder.py
projects/sphinx_domain/sphinx_{{cookiecutter.proj_name}}_domain/sphinx_{{cookiecutter.proj_name}}_domain/directives/: __init__.py  entry.py
projects/sphinx_domain/sphinx_{{cookiecutter.proj_name}}_domain/sphinx_{{cookiecutter.proj_name}}_domain/indices/: __init__.py  index.py
projects/sphinx_domain/sphinx_{{cookiecutter.proj_name}}_domain/sphinx_{{cookiecutter.proj_name}}_domain/roles/: __init__.py  role.py
(+2120 files in other folders)
