[project]
name = "blah"
# name          = "{{cookiecutter.proj_name}}"
version       = "0.1.0"
description   = "Add your description here"
readme        = "README.md"

[dependency-groups]
dev           = [
    "towncrier>=24.8.0",
    "tox>=4.28.4",
]

docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-autoapi>=3.6.0",
    "sphinx-rtd-theme>=3.0.2",
    "pydot>=4.0.1",
    "tox>=4.28.4",
    "tox-uv>=1.27.0",
]
