## Cargo.toml -*- mode: Toml -*-
## A Rust workspace structure based on uv's
# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members          = ["crates/*"]
exclude          = []
default-members  = []
resolver         = "2"

[workspace.package]
name           = "{{cookiecutter.proj_name}}"
version        = "0.1.1"
authors        = [ "{{cookiecutter._author}}"]
homepage       = ""
documentation  = ""
repository     = ""
license        = "ACAB"
rust-version   = "1.86"
edition        = "{{cookiecutter.edition}}"

[workspace.dependencies]
# Internal deps:
# lib         = { path="crates/lib", default-features=false, features=[] }

# External deps:
# lib  = { version="1.0" }
cty    = "0.2.2."
emacs  = "0.19"

[workspace.dev-dependencies]
bindgen = "0.70.1"

[patch.crates-io]

[workspace.lints.rust]

[workspace.lints.clippy]

[profile.release]
strip  = true
lto    = "fat"

[profile.profiling]
inherits  = "release"
strip     = false
debug     = "full"
lto       = false

[profile.minimal-size]
inherits   = "release"
opt-level  = "z"
# This will still show a panic message, we only skip the unwind
panic          = "abort"
codegen-units  = 1

[profile.dist]
inherits = "release"

[profile.fast-build]
inherits  = "dev"
debug     = 0
strip     = "debuginfo"
