## Cargo.toml -*- mode: toml -*-

# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name    = "{{cookiecutter.proj_name}}"
version = "0.1.0"
edition = "{{cookiecutter.edition}}"
authors = [ "{{cookiecutter._author}}"]

[lib]
name       = "{{cookiecutter.proj_name}}"
crate-type = ["cdylib"]
path       = "rust/lib.rs"

[dependencies]
pyo3 = "0.22.0"


[dev-dependencies]
