## Cargo.toml -*- mode: toml -*-

# https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members          = ["src/*-rs"]
exclude          = []
default-members  = []

resolver         = "2"

[workspace.package]
name           = "{{cookiecutter.proj_name}}"
version        = "0.1.0"
edition        = "{{cookiecutter.edition}}"
authors        = [ "{{cookiecutter._author}}"]
homepage       = ""
documentation  = ""
repository     = ""
license        = "ACAB"
rust-version   = "1.86"
edition        = "{{cookiecutter.edition}}"

[workspace.dependencies]
# Internal deps:
# lib         = { path="crates/lib", default-features=false, features=[] }

# External deps:
# lib = { version="1.0" }

[workspace.dev-dependencies]

[patch.crates-io]

[workspace.lints.rust]

[workspace.lints.clippy]

[profile.release]
strip  = true
lto    = "fat"

[profile.profiling]
inherits  = "release"
strip     = false
debug     = "full"
lto       = false

[profile.minimal-size]
inherits   = "release"
opt-level  = "z"
# This will still show a panic message, we only skip the unwind
panic          = "abort"
codegen-units  = 1

[profile.dist]
inherits = "release"

[profile.fast-build]
inherits  = "dev"
debug     = 0
strip     = "debuginfo"

[lib]
name        = "{{cookiecutter.proj_name}}"
crate-type  = ["cdylib"]
path        = "src/{{cookiecutter.proj_name}}-rs/lib.rs"

[dependencies]
pyo3        = "0.22.0"

[dev-dependencies]
