[project]
name            = "{{cookiecutter.proj_name}}"
version         = "0.1.0"
description     = ""
readme          = "README.md"
requires-python = ">={{cookiecutter.python}}"
license         = {file = "LICENSE"}
keywords        = ["rust"]
authors         = [
  {name  = "{{cookiecutter._author}}", email = "{{cookiecutter._email}}"},
]
classifiers     = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

##-- dependencies
dependencies   = []

[project.optional-dependencies]
docs = [ "sphinx" ]
dev  = [ "https://github.com/jgrey4296/doot"]
test = [ "pytest" ]

##-- end dependencies

##-- urls
[project.urls]
homepage      = "https://github.com/{{cookiecutter._github_username}}/{{cookiecutter.proj_name}}"
documentation = "https://readthedocs.org/{{cookiecutter.proj_name}}"
repository    = "https://github.com/{{cookiecutter._github_username}}/{{cookiecutter.proj_name}}"
changelog     = "https://github.com//{{cookiecutter.proj_name}}/blob/master/CHANGELOG.md"

##-- end urls

##-- scripts
[project.scripts]
"{{cookiecutter.proj_name}}" = "{{cookiecutter.proj_name}}.{{cookiecutter.entry_point}}:main"

[project.gui-scripts]
# spam-gui      = "spam:main_gui"

[project.entry-points."nothing"]
# tomatoes      = "spam:main_tomatoes"

##-- end scripts

##-- build system
`(+snippet-expand "maturin.build")`

# Tools #######################################################################

`(+snippet-expand "maturin.tool")`

`(+snippet-expand "mypy.tool")`

`(+snippet-expand "pytest.tool")`

`(+snippet-expand "isort.tool")`

`(+snippet-expand "coverage.tool")`

`(+snippet-expand "towncrier")`
