## pyproject.toml -*- mode: conf-toml  -*-
[project]
name            = "{{cookiecutter.proj_name}}"
version         = "0.1.0"
description     = ""
readme          = "README.md"
requires-python = ">={{cookiecutter.python}}"
license         = {file = "LICENSE"}
keywords        = []
authors         = [
  {name  = "{{cookiecutter._author}}", email = "{{cookiecutter._email}}"},
]
classifiers     = [
  "Programming Language :: Python"
]

##-- dependencies
dependencies   = []

[project.optional-dependencies]
test = [
  "pytest < 5.0.0",
]

##-- end dependencies

##-- urls
[project.urls]
homepage      = "https://github.com/{{cookiecutter._github_username}}/{{cookiecutter.proj_name}}"
documentation = "https://readthedocs.org/{{cookiecutter.proj_name}}"
repository    = "https://github.com/{{cookiecutter._github_username}}/{{cookiecutter.proj_name}}"
changelog     = "https://github.com//{{cookiecutter.proj_name}}/blob/master/CHANGELOG.md"

##-- end urls

##-- scripts
[project.scripts]
# {{cookiecutter.proj_name}} = "{{cookiecutter.proj_name}}.{{cookiecutter.entry_point}}:main"

[project.gui-scripts]
# spam-gui      = "spam:main_gui"

[project.entry-points."nothing"]
# tomatoes      = "spam:main_tomatoes"

##-- end scripts

##-- build-system
[build-system]
# frontend: https://pypa-build.readthedocs.io/en/latest/index.html
# frontend: https://pdm.fming.dev/latest/
requires = [
         "setuptools >= 63.1.0",
         "wheel >= 0.37.1"
         # https://flit.pypa.io/en/stable/index.html
         # "flit_core > 3.2, <4",
         # https://pdm-backend.fming.dev/
         # "pdm-backend"

]

build-backend = "setuptools.build_meta"
# build-backend = "flit_core.buildapi"
# build-backend = "pdm.backend"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where      = ["."]
include    = ["{{cookiecutter.proj_name}}*"]

[tool.setuptools.package-data]
"*" = ["*"]
"{{cookiecutter.proj_name}}.__data"    = ["*.so"]

[tool.setuptools.exclude-package-data]

##-- end build-system

# Tools #######################################################################

mypy.tool

pytest.tool

isort.tool

coverage.tool

towncrier

uv.tool
